fixed style bug z-index

--- a/src/sass/pages/_index.sass
+++ b/src/sass/pages/_index.sass
@@ -367,6 +367,7 @@
 	.slider-main 
 		.slider-content
 			top: 35%!important
+			z-index: 1!important
 	.homepage-hero-module
 		border-right: none
 		border-left: none
@@ -391,7 +392,7 @@
 			bottom: 0
 			position: absolute
 		.filter
-			z-index: 100
+			z-index: 1
 			position: absolute
 			background: rgba(0, 0, 0, 0.4)
 			width: 100%
